VSE Retiming doesn't set keys correctly with framerate differences #114630

Closed
opened 2023-11-08 13:46:07 +01:00 by Julien Kaspar · 4 comments
Member

System Information
Operating system: Linux-6.5.6-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.6-gentoo) AMD 4.6 (Core Profile) Mesa 23.2.1

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-07 21:31, hash: 94106447950c
Worked: (newest version of Blender that worked as expected)

Short description of error

When loading in video strips there might be a difference between the framerate of the scene and the video.
If this happens and retiming keys are used, the inital start & end keys for the timing will be off.
The end frame will be too far left or right and cannot be selected.
Any operation to change the strip speed or add more retiming keys will lead to wrong retiming speeds.

In this example image I imported, extended and retimed the strip to 200%. I also selected all keys that were selectable.
Screenshot_20231108_125516.png

Exact steps for others to reproduce the error

  • Open a new VSE scene
  • Make sure the render rate is on 24 fps
  • Import a strip that is 30 fps (or any other fps that doesn't match the scene)
  • Select the strip and press Ctrl R (The start and end keys should be at the ends of the strip but are offset)
  • Retime the entire strip with R to 200% (The values on the strip will not match up)
  • Try to select the start and end key on the strip (Won't work)
**System Information** Operating system: Linux-6.5.6-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.6-gentoo) AMD 4.6 (Core Profile) Mesa 23.2.1 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-07 21:31, hash: `94106447950c` Worked: (newest version of Blender that worked as expected) **Short description of error** When loading in video strips there might be a difference between the framerate of the scene and the video. If this happens and retiming keys are used, the inital start & end keys for the timing will be off. The end frame will be too far left or right and cannot be selected. Any operation to change the strip speed or add more retiming keys will lead to wrong retiming speeds. In this example image I imported, extended and retimed the strip to 200%. I also selected all keys that were selectable. ![Screenshot_20231108_125516.png](/attachments/a050811d-f508-48a2-898e-f5cd0b4ec1b1) **Exact steps for others to reproduce the error** - Open a new VSE scene - Make sure the render rate is on 24 fps - Import a strip that is 30 fps (or any other fps that doesn't match the scene) - Select the strip and press `Ctrl R` (The start and end keys should be at the ends of the strip but are offset) - Retime the entire strip with `R` to 200% (The values on the strip will not match up) - Try to select the start and end key on the strip (Won't work)
Julien Kaspar added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-11-08 13:46:08 +01:00
Author
Member
@iss
Author
Member

Also moving keys and using Right Mouse to cancel doesn't preperly work. I keep finding more bugs. It seems the retiming operations in general are not working correctly if the frame rate doesn't match the scene.

Also moving keys and using `Right Mouse` to cancel doesn't preperly work. I keep finding more bugs. It seems the retiming operations in general are not working correctly if the frame rate doesn't match the scene.
Member

Can confirm.

Can confirm.
Philipp Oeser added
Status
Confirmed
Module
VFX & Video
Interest
Video Sequencer
and removed
Status
Needs Triage
labels 2023-11-08 14:49:57 +01:00

Looking into this, there are bunch of issues, due to keys having position in strip space, which is then rescaled by difference of scene and movie FPS. However some checks are done in screen space and some operations in timeline space. I have to tread carefully here so I don't break it more than it is, so this will take me some time I need for testing.

Looking into this, there are bunch of issues, due to keys having position in strip space, which is then rescaled by difference of scene and movie FPS. However some checks are done in screen space and some operations in timeline space. I have to tread carefully here so I don't break it more than it is, so this will take me some time I need for testing.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-15 21:02:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114630
No description provided.