Fix 114630: Retiming fails if movie and scene FPS does not match